# liauth

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx  CommandPalette.tsx  HelpPanel.tsx  RsvpOverlay.tsx  api.ts  fuzzy.ts  menu.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  config.rs  git.rs  lib.rs  main.rs
src/editor/: livePreview.ts  notes.ts  rsvp.ts  setup.ts  typewriter.ts  vimrc.ts
