[package]
name = "liauth"
version = "0.1.0"
description = "A markdown editor that doesn't suck: Typora-style live preview with an embedded git engine"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "liauth_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.21.0"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
diffy = "0.5.0"
tauri-plugin-process = "2"

# Native print with real page margins; tauri's Webview::print() hardcodes
# zero margins. Versions/features match what wry already pulls in, so this
# adds nothing to the build.
[target.'cfg(target_os = "macos")'.dependencies]
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSPrintInfo",
    "NSPrintOperation",
    "NSResponder",
    "NSView",
    "NSWindow",
] }
objc2-web-kit = { version = "0.3", default-features = false, features = [
    "std",
    "objc2-core-foundation",
    "objc2-app-kit",
    "block2",
    "WKWebView",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3.27.0"

